# svx

./: .gitignore  .graft  BRIDGE.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  SENTINEL.md  SVX-REWORK.md  pyproject.toml
.github/workflows/: tests.yml
policies/: default.yaml
src/svx/: __init__.py  audit.py  bridge.py  cli.py  config.py  hook_config.py  humanize.py  parser.py  schemas.py  server.py  session.py  simulator.py  snapshot.py  verifier.py
tests/: test_bridge.py  test_file_edit.py  test_hook_config.py  test_hook_output.py  test_init_and_scoping.py  test_parser.py  test_server.py  test_session.py  test_verifier.py  test_version.py
